--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required(VERSION 3.20)
 project(Hello_DS LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(hello_ds main.cpp)
+add_executable(hello_ds
+        LInked_Lists_Launcher.cpp
+        LInked_Lists_Launcher.h)
